load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "devbox",
    srcs = [
        "config.go",
        "devbox.go",
        "generate.go",
    ],
    embedsrcs = [
        "tmpl/default.nix.tmpl",
        "tmpl/shell.nix.tmpl",
        "tmpl/Dockerfile.tmpl",
    ],
    importpath = "go.jetpack.io/axiom/opensource/devbox",
    visibility = ["//visibility:public"],
    deps = [
        "//opensource/devbox/cuecfg",
        "//opensource/devbox/docker",
        "//opensource/devbox/nix",
        "//opensource/devbox/planner",
        "@com_github_pkg_errors//:errors",
    ],
)
