load("@io_bazel_rules_go//go:def.bzl", "go_library")
# gazelle:prefix go.jetpack.io/devbox

go_library(
    name = "devbox",
    srcs = [
        "config.go",
        "devbox.go",
        "generate.go",
    ],
    embedsrcs = [
        "tmpl/default.nix.tmpl",
        "tmpl/shell.nix.tmpl",
        "tmpl/Dockerfile.tmpl",
        "tmpl/.gitignore.tmpl",
    ],
    importpath = "go.jetpack.io/devbox",
    visibility = ["//visibility:public"],
    deps = [
        "//opensource/devbox/cuecfg",
        "//opensource/devbox/docker",
        "//opensource/devbox/nix",
        "//opensource/devbox/planner",
        "@com_github_pkg_errors//:errors",
        "@com_github_samber_lo//:lo",
    ],
)
