load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["devbox.go"],
    importpath = "go.jetpack.io/devbox/cmd",
    visibility = ["//visibility:private"],
    deps = ["//opensource/devbox/boxcli"],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
