load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cuecfg",
    srcs = [
        "cuecfg.go",
        "doc.go",
        "json.go",
        "yaml.go",
    ],
    importpath = "go.jetpack.io/axiom/opensource/devbox/cuecfg",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_pkg_errors//:errors",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@org_cuelang_go//cuego",
    ],
)
