load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "planner",
    srcs = [
        "empty_planner.go",
        "go_planner.go",
        "plan.go",
        "planner.go",
        "python_planner.go",
    ],
    importpath = "go.jetpack.io/devbox/planner",
    visibility = ["//visibility:public"],
    deps = ["@com_github_imdario_mergo//:mergo"],
)

go_test(
    name = "planner_test",
    srcs = ["plan_test.go"],
    embed = [":planner"],
    deps = ["@com_github_stretchr_testify//assert"],
)
