load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "devbox_lib",
    srcs = ["main.go"],
    importpath = "go.jetpack.io/axiom/opensource/devbox/cmd/devbox",
    visibility = ["//visibility:private"],
    deps = ["//opensource/devbox/boxcli"],
)

go_binary(
    name = "devbox",
    embed = [":devbox_lib"],
    visibility = ["//visibility:public"],
)
