[tool.poetry]
name = "python-poetry"
version = "0.1.0"
description = ""
authors = ["Jose Example <jose@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
uvicorn = "^0.18.3"
fastapi = "^0.92.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "python_poetry:run_server"
