[tool.poetry]
name = "devbox-cuda-dev"
version = "0.1.0"
description = ""
authors = ["jetify.com"]
readme = "README.md"
packages = [{include = "devbox_cuda_dev"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.1"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
