[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["John Lago <750845+Lagoja@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
emoji = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
demo = "poetry_demo.__main__:main"
