[tool.poetry]
name = "poetry-pyproject-subdir-service"
version = "0.1.0"
description = ""
authors = ["Savil Srivastava <676452+savil@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
emoji = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
